@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.antenna.gr" version="2.0.2" name="ANT1 Player" provider-name="Twilight0">
+<addon id="plugin.video.antenna.gr" version="2.0.3" name="ANT1 Player" provider-name="Twilight0">
     <requires>
         <import addon="xbmc.python" version="2.24.0" />
         <import addon="script.module.tulip" version="2.4.1" />
@@ -20,7 +20,11 @@
         <source>https://github.com/Twilight0/plugin.video.antenna.gr</source>
         <website>http://www.antenna.gr/</website>
         <size>692701</size>
-        <news>[B]2.0.2[/B]
+        <news>[B]2.0.3[/B]
+- Remove forgotten print statement
+- Replace control.sleep with native sleep of 50ms between requests
+
+[B]2.0.2[/B]
 - Added the "unsorted" method as default instead of title
 
 [B]2.0.1[/B]
